--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -3,4 +3,6 @@
   text-align: center;
   background-repeat: no-repeat;
   background-size: auto;
+  vertical-align: bottom;
+  min-height: 100vh;
 }
