changed path for signup page

--- a/client/src/components/Signup/Signup.css
+++ b/client/src/components/Signup/Signup.css
@@ -1,4 +1,4 @@
- body{
+ .authentication-bg{
     background-image: url('background_image.jpg');
     background-size: cover;
     background-repeat: no-repeat;
